--- a/index.html
+++ b/index.html
@@ -33,31 +33,56 @@ googletag.enableServices();
 });
 </script>
 </head>
-<header>
-    <h1>Your Ad Here</h1>
-	</header>
+	<table style="width:100%">
+	<tr>
+		<td>
+		Ad Unit
+		</td>
+		<td>
+		Banner Image
+		</td>
+	</tr>
 <!-- Shift Ad Unit Indefinite -->
+	<tr>
+		<td>
+		Shift Ad Unit Indefinite
+		</td>
+		<td>
 <div id='div-gpt-ad-1425439473763-0' style='width:250px; height:300px;'>
 <script type='text/javascript'>
 googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425439473763-0'); });
 </script>
 </div>
+		</td>
+	</tr>
 
-    <h1>Your Ad Here</h1>
-	</header>
 <!-- Tracking Test Pub | pisces-penton.com | *ROS* | 300x250 -->
+<tr>
+		<td>
+		Tracking Test Pub | pisces-penton.com | *ROS* | 300x250
+		</td>
+		<td>
 <div id='div-gpt-ad-1425499305087-0' style='width:300px; height:250px;'>
 <script type='text/javascript'>
 googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425499305087-0'); });
 </script>
 </div>
+		</td>
+	</tr>
 
-    <h1>Your Ad Here</h1>
-	</header>
 <!-- Tracking Test Pub | Tracking Test Pub Freeform Media | TTP Rotating logo on homepage twitter widget | Exclusive -->
+<tr>
+		<td>
+		Tracking Test Pub | Tracking Test Pub Freeform Media | TTP Rotating logo on homepage twitter widget | Exclusive
+		</td>
+		<td>
 <div id='div-gpt-ad-1425499305087-1' style='width:300px; height:250px;'>
 <script type='text/javascript'>
 googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425499305087-1'); });
 </script>
 </div>
+		</td>
+	</tr>
+
+</table>
 </html>
