--- a/index.html
+++ b/index.html
@@ -33,7 +33,19 @@ googletag.enableServices();
 });
 </script>
 </head>
-	<table style="width:100%">
+
+<style type="text/css">
+table.example2 {background-color:transparent;border-collapse:collapse;width:100%;}
+table.example2 th, table.example2 td {text-align:center;border:1px solid black;padding:5px;}
+table.example2 th {background-color:AntiqueWhite;}
+table.example2 td:first-child {width:20%;}
+</style>
+<center>
+	<H1>Shift Advertisment Table</H1>
+
+
+</center>
+	<table style="width:100%" class="example2">
 	<tr>
 		<td>
 		Ad Unit
