--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ node.parentNode.insertBefore(gads, node);
  
 <script type='text/javascript'>
 googletag.cmd.push(function() {
-googletag.defineSlot('/121471751/SHIFTIND01', [250, 300], 'div-gpt-ad-1425439473763-0').addService(googletag.pubads());
 googletag.defineSlot('/121471751/SHIFTPEN1', [300, 250], 'div-gpt-ad-1425499305087-0').addService(googletag.pubads());
 googletag.defineSlot('/121471751/327831911', [300, 250], 'div-gpt-ad-1425499305087-1').addService(googletag.pubads());
 googletag.pubads().enableSingleRequest();
@@ -49,22 +48,17 @@ table.example2 td:first-child {width:20%;}
 		Ad Unit
 		</td>
 		<td>
+		Order Name(s)
+		</td>
+		<td>
+		Line ID(s)
+		</td>
+		<td>
 		Banner Image
 		</td>
 	</tr>
 <!-- Shift Ad Unit Indefinite -->
-	<tr>
-		<td>
-		Shift Ad Unit Indefinite
-		</td>
-		<td>
-<div id='div-gpt-ad-1425439473763-0' style='width:250px; height:300px;'>
-<script type='text/javascript'>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425439473763-0'); });
-</script>
-</div>
-		</td>
-	</tr>
+	
 
 <!-- Tracking Test Pub | pisces-penton.com | *ROS* | 300x250 -->
 <tr>
@@ -72,11 +66,19 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425439473763-0');
 		Tracking Test Pub | pisces-penton.com | *ROS* | 300x250
 		</td>
 		<td>
-<div id='div-gpt-ad-1425499305087-0' style='width:300px; height:250px;'>
-<script type='text/javascript'>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425499305087-0'); });
-</script>
-</div>
+			Shift CRM - Shift Campaign March 2015
+		</td>
+		<td>
+			195522031
+		</td>
+		<td>
+			<center>
+				<div id='div-gpt-ad-1425499305087-0' style='width:300px; height:250px;'>
+				<script type='text/javascript'>
+				googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425499305087-0'); });
+				</script>
+				</div>
+			</center>
 		</td>
 	</tr>
 
@@ -86,11 +88,19 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425499305087-0');
 		Tracking Test Pub | Tracking Test Pub Freeform Media | TTP Rotating logo on homepage twitter widget | Exclusive
 		</td>
 		<td>
-<div id='div-gpt-ad-1425499305087-1' style='width:300px; height:250px;'>
-<script type='text/javascript'>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425499305087-1'); });
-</script>
-</div>
+			Shift CRM - Shift Campaign March 2015
+		</td>
+		<td>
+			195522151
+		</td>
+		<td>
+			<center>
+				<div id='div-gpt-ad-1425499305087-1' style='width:300px; height:250px;'>
+				<script type='text/javascript'>
+				googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425499305087-1'); });
+				</script>
+				</div>
+			</center>
 		</td>
 	</tr>
 
