--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ table.example2 td:first-child {width:20%;}
 <!-- Tracking Test Pub | pisces-penton.com | *ROS* | 300x250 -->
 <tr>
 		<td>
-		Tracking Test Pub | pisces-penton.com | *ROS* | 300x250
+		 *ROS* | 300x250
 		</td>
 		<td>
 			Shift CRM - Shift Campaign March 2015
