--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ table.example2 td:first-child {width:20%;}
 <!-- Tracking Test Pub | pisces-penton.com | *ROS* | 300x250 -->
 <tr>
 		<td>
-		 *ROS* | 300x250
+		 Leaderboard_728x90
 		</td>
 		<td>
 			Shift CRM - Shift Campaign March 2015
@@ -85,7 +85,7 @@ table.example2 td:first-child {width:20%;}
 <!-- Tracking Test Pub | Tracking Test Pub Freeform Media | TTP Rotating logo on homepage twitter widget | Exclusive -->
 <tr>
 		<td>
-		Tracking Test Pub | Tracking Test Pub Freeform Media | TTP Rotating logo on homepage twitter widget | Exclusive
+		Facebook - Sidebar
 		</td>
 		<td>
 			Shift CRM - Shift Campaign March 2015
