--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ table.example2 td:first-child {width:20%;}
 		<td>
 		Ad Unit
 		</td>
-		<td>
+		<td width="70%">
 		Order Name(s)
 		</td>
-		<td>
+		<td width="70%">
 		Line ID(s)
 		</td>
 		<td>
@@ -65,10 +65,10 @@ table.example2 td:first-child {width:20%;}
 		<td>
 		 Leaderboard_728x90
 		</td>
-		<td>
+		<td width="70%">
 			Shift CRM - Shift Campaign March 2015
 		</td>
-		<td>
+		<td width="70%">
 			195522031
 		</td>
 		<td>
@@ -87,10 +87,10 @@ table.example2 td:first-child {width:20%;}
 		<td>
 		Facebook - Sidebar
 		</td>
-		<td>
+		<td width="70%">
 			Shift CRM - Shift Campaign March 2015
 		</td>
-		<td>
+		<td width="70%">
 			195522151
 		</td>
 		<td>
