--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ table.example2 td:first-child {width:20%;}
 </center>
 	<table style="width:100%" class="example2">
 	<tr>
-		<td>
+		<td style="width:100px">
 		Ad Unit
 		</td>
 		<td style="width:100px">
@@ -62,7 +62,7 @@ table.example2 td:first-child {width:20%;}
 
 <!-- Tracking Test Pub | pisces-penton.com | *ROS* | 300x250 -->
 <tr>
-		<td>
+		<td style="width:100px">
 		 Leaderboard_728x90
 		</td>
 		<td style="width:100px">
@@ -84,7 +84,7 @@ table.example2 td:first-child {width:20%;}
 
 <!-- Tracking Test Pub | Tracking Test Pub Freeform Media | TTP Rotating logo on homepage twitter widget | Exclusive -->
 <tr>
-		<td>
+		<td style="width:100px">
 		Facebook - Sidebar
 		</td>
 		<td style="width:100px">
