--- a/index.html
+++ b/index.html
@@ -55,40 +55,12 @@ table.example2 td:first-child {width:20%;}
 <!-- Shift Ad Unit Indefinite -->
 	<tr>
 		<td>
-		Shift Ad Unit Indefinite
+		September Campaign - Leaderboard_728x90	
 		</td>
 		<td>
 <div id='div-gpt-ad-1425439473763-0' style='width:250px; height:300px;'>
 <script type='text/javascript'>
 googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425439473763-0'); });
-</script>
-</div>
-		</td>
-	</tr>
-
-<!-- Tracking Test Pub | pisces-penton.com | *ROS* | 300x250 -->
-<tr>
-		<td>
-		Tracking Test Pub | pisces-penton.com | *ROS* | 300x250
-		</td>
-		<td>
-<div id='div-gpt-ad-1425499305087-0' style='width:300px; height:250px;'>
-<script type='text/javascript'>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425499305087-0'); });
-</script>
-</div>
-		</td>
-	</tr>
-
-<!-- Tracking Test Pub | Tracking Test Pub Freeform Media | TTP Rotating logo on homepage twitter widget | Exclusive -->
-<tr>
-		<td>
-		Tracking Test Pub | Tracking Test Pub Freeform Media | TTP Rotating logo on homepage twitter widget | Exclusive
-		</td>
-		<td>
-<div id='div-gpt-ad-1425499305087-1' style='width:300px; height:250px;'>
-<script type='text/javascript'>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425499305087-1'); });
 </script>
 </div>
 		</td>
