--- a/index.html
+++ b/index.html
@@ -8,29 +8,18 @@ body {
     background-color: #b0c4de;
 }
 </style>
-<script type='text/javascript'>
-var googletag = googletag || {};
-googletag.cmd = googletag.cmd || [];
-(function() {
-var gads = document.createElement('script');
-gads.async = true;
-gads.type = 'text/javascript';
-var useSSL = 'https:' == document.location.protocol;
-gads.src = (useSSL ? 'https:' : 'http:') + 
-'//www.googletagservices.com/tag/js/gpt.js';
-var node = document.getElementsByTagName('script')[0];
-node.parentNode.insertBefore(gads, node);
-})();
+	<script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
+<script>
+  var googletag = googletag || {};
+  googletag.cmd = googletag.cmd || [];
 </script>
- 
-<script type='text/javascript'>
-googletag.cmd.push(function() {
-googletag.defineSlot('/121471751/SHIFTIND01', [250, 300], 'div-gpt-ad-1425439473763-0').addService(googletag.pubads());
-googletag.defineSlot('/121471751/SHIFTPEN1', [300, 250], 'div-gpt-ad-1425499305087-0').addService(googletag.pubads());
-googletag.defineSlot('/121471751/327831911', [300, 250], 'div-gpt-ad-1425499305087-1').addService(googletag.pubads());
-googletag.pubads().enableSingleRequest();
-googletag.enableServices();
-});
+
+<script>
+  googletag.cmd.push(function() {
+    googletag.defineSlot('/121471751/Leaderboard_728x90', [[300, 250], [728, 90]], 'div-gpt-ad-1505875071154-0').addService(googletag.pubads());
+    googletag.pubads().enableSingleRequest();
+    googletag.enableServices();
+  });
 </script>
 </head>
 
@@ -58,10 +47,12 @@ table.example2 td:first-child {width:20%;}
 		September Campaign - Leaderboard_728x90	
 		</td>
 		<td>
-<div id='div-gpt-ad-1425439473763-0' style='width:250px; height:300px;'>
-<script type='text/javascript'>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425439473763-0'); });
+			<!-- /121471751/Leaderboard_728x90 -->
+<div id='div-gpt-ad-1505875071154-0'>
+<script>
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1505875071154-0'); });
 </script>
+</div>
 </div>
 		</td>
 	</tr>
