--- a/index.html
+++ b/index.html
@@ -8,28 +8,18 @@ body {
     background-color: #b0c4de;
 }
 </style>
-<script type='text/javascript'>
-var googletag = googletag || {};
-googletag.cmd = googletag.cmd || [];
-(function() {
-var gads = document.createElement('script');
-gads.async = true;
-gads.type = 'text/javascript';
-var useSSL = 'https:' == document.location.protocol;
-gads.src = (useSSL ? 'https:' : 'http:') + 
-'//www.googletagservices.com/tag/js/gpt.js';
-var node = document.getElementsByTagName('script')[0];
-node.parentNode.insertBefore(gads, node);
-})();
+	<script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
+<script>
+  var googletag = googletag || {};
+  googletag.cmd = googletag.cmd || [];
 </script>
- 
-<script type='text/javascript'>
-googletag.cmd.push(function() {
-googletag.defineSlot('/121471751/SHIFTPEN1', [300, 250], 'div-gpt-ad-1425499305087-0').addService(googletag.pubads());
-googletag.defineSlot('/121471751/327831911', [300, 250], 'div-gpt-ad-1425499305087-1').addService(googletag.pubads());
-googletag.pubads().enableSingleRequest();
-googletag.enableServices();
-});
+
+<script>
+  googletag.cmd.push(function() {
+    googletag.defineSlot('/121471751/Leaderboard_728x90', [[300, 250], [728, 90]], 'div-gpt-ad-1505875071154-0').addService(googletag.pubads());
+    googletag.pubads().enableSingleRequest();
+    googletag.enableServices();
+  });
 </script>
 </head>
 
@@ -44,59 +34,26 @@ table.example2 td:first-child {width:20%;}
 </center>
 	<table style="width:100%" class="example2">
 	<tr>
-		<td style="width:100px">
+		<td>
 		Ad Unit
-		</td>
-		<td style="width:100px">
-		Order Name(s)
-		</td>
-		<td style="width:100px">
-		Line ID(s)
 		</td>
 		<td>
 		Banner Image
 		</td>
 	</tr>
 <!-- Shift Ad Unit Indefinite -->
-	
-
-<!-- Tracking Test Pub | pisces-penton.com | *ROS* | 300x250 -->
-<tr>
-		<td style="width:100px">
-		 Leaderboard_728x90
-		</td>
-		<td style="width:100px">
-			Shift CRM - Shift Campaign March 2015
-		</td>
-		<td style="width:100px">
-			195522031
+	<tr>
+		<td>
+		September Campaign - Leaderboard_728x90	
 		</td>
 		<td>
-				<div id='div-gpt-ad-1425499305087-0' style='width:300px; height:250px;'>
-				<script type='text/javascript'>
-				googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425499305087-0'); });
-				</script>
-				</div>
-		</td>
-	</tr>
-
-<!-- Tracking Test Pub | Tracking Test Pub Freeform Media | TTP Rotating logo on homepage twitter widget | Exclusive -->
-<tr>
-		<td style="width:100px">
-		Facebook - Sidebar
-		</td>
-		<td style="width:100px">
-			Shift CRM - Shift Campaign March 2015
-		</td>
-		<td style="width:100px">
-			195522151
-		</td>
-		<td>
-				<div id='div-gpt-ad-1425499305087-1' style='width:300px; height:250px;'>
-				<script type='text/javascript'>
-				googletag.cmd.push(function() { googletag.display('div-gpt-ad-1425499305087-1'); });
-				</script>
-				</div>
+			<!-- /121471751/Leaderboard_728x90 -->
+<div id='div-gpt-ad-1505875071154-0'>
+<script>
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1505875071154-0'); });
+</script>
+</div>
+</div>
 		</td>
 	</tr>
 
