--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@ table.example2 th, table.example2 td {text-align:center;border:1px solid black;p
 table.example2 th {background-color:AntiqueWhite;}
 table.example2 td:first-child {width:20%;}
 </style>
+	<body>
 <center>
 	<H1>Shift Advertisment Table</H1>
 </center>
+	
 	<table style="width:100%" class="example2">
 	<tr>
 		<td>
@@ -57,4 +59,5 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1505875071154-0');
 	</tr>
 
 </table>
+	</body>
 </html>
