--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body {
     background-color: #b0c4de;
 }
 </style>
-	<script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
+<script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
 <script>
   var googletag = googletag || {};
   googletag.cmd = googletag.cmd || [];
@@ -16,7 +16,7 @@ body {
 
 <script>
   googletag.cmd.push(function() {
-    googletag.defineSlot('/121471751/Leaderboard_728x90', [[300, 250], [728, 90]], 'div-gpt-ad-1505875913344-0').addService(googletag.pubads());
+    googletag.defineSlot('/121471751/Leaderboard_728x90', [728, 90], 'div-gpt-ad-1505913314778-0').addService(googletag.pubads());
     googletag.pubads().enableSingleRequest();
     googletag.enableServices();
   });
@@ -50,9 +50,9 @@ table.example2 td:first-child {width:20%;}
 		</td>
 		<td>
 			<!-- /121471751/Leaderboard_728x90 -->
-<div id='div-gpt-ad-1505875071154-0'>
+<div id='div-gpt-ad-1505913314778-0' style='height:90px; width:728px;'>
 <script>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1505875071154-0'); });
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1505913314778-0'); });
 </script>
 </div>
 		</td>
