--- a/test.html
+++ b/test.html
@@ -10,20 +10,20 @@
   var googletag = googletag || {};
   googletag.cmd = googletag.cmd || [];
 </script>
- 
+
 <script>
   googletag.cmd.push(function() {
-    googletag.defineSlot('/121471751/Leaderboard_728x90', [[300, 250], [728, 90]], 'div-gpt-ad-1505913001857-0').addService(googletag.pubads());
+    googletag.defineSlot('/121471751/Leaderboard_728x90', [728, 90], 'div-gpt-ad-1505913314778-0').addService(googletag.pubads());
     googletag.pubads().enableSingleRequest();
     googletag.enableServices();
   });
 </script>
 </head>
 <body>
-<!-- /121471751/Leaderboard_728x90 -->
-<div id='div-gpt-ad-1505913001857-0'>
+  <!-- /121471751/Leaderboard_728x90 -->
+<div id='div-gpt-ad-1505913314778-0' style='height:90px; width:728px;'>
 <script>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1505913001857-0'); });
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1505913314778-0'); });
 </script>
 </div>
 </body>
