--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ table.example2 td:first-child {width:20%;}
 	<table style="width:100%" class="example2">
 	<tr>
 		<td>
-		Ad Unit
+		Campaign
 		</td>
 		<td>
 		Banner Image
@@ -48,7 +48,7 @@ table.example2 td:first-child {width:20%;}
 		<td>
 		September Campaign - Leaderboard_728x90	
 		</td>
-		<td>
+		<td height="100">
 			<!-- /121471751/Leaderboard_728x90 -->
 <div id='div-gpt-ad-1505913314778-0' style='height:90px; width:728px;'>
 <script>
