--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ table.example2 td:first-child {width:20%;}
 	<table style="width:100%" class="example2">
 	<tr>
 		<td>
-		Campaign
+		Ad Unit
 		</td>
 		<td>
 		Banner Image
@@ -45,10 +45,10 @@ table.example2 td:first-child {width:20%;}
 	</tr>
 <!-- Shift Ad Unit Indefinite -->
 	<tr>
-		<td>
-		September Campaign - Leaderboard_728x90	
+		<td style="height:150px;">
+		September Campaign
 		</td>
-		<td height="100">
+		<td style="height:150px;">
 			<!-- /121471751/Leaderboard_728x90 -->
 <div id='div-gpt-ad-1505913314778-0' style='height:90px; width:728px;'>
 <script>
