--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ table.example2 td:first-child {width:20%;}
 		</td>
 		<td style="height:400px;">
 			<!-- /121471751/Leaderboard_728x90 -->
-<div id='div-gpt-ad-1505913314778-0' style='height:90px; width:728px;'>
+<div id='div-gpt-ad-1505913314778-0' style='position:absolute; top: 100px; right: 100px; height:90px; width:728px;'>
 <script>
 googletag.cmd.push(function() { googletag.display('div-gpt-ad-1505913314778-0'); });
 </script>
