--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@ body {
     googletag.enableServices();
   });
 </script>
+
+<script>
+  googletag.cmd.push(function() {
+    googletag.defineSlot('/121471751/SHIFTPEN1', [300, 250], 'div-gpt-ad-1506663580660-0').addService(googletag.pubads());
+    googletag.pubads().enableSingleRequest();
+    googletag.enableServices();
+  });
+</script>
 </head>
 
 <style type="text/css">
@@ -59,5 +67,16 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1505913314778-0');
 	</tr>
 
 </table>
+		
+<center>
+	<H1>New Ad - 300 x 250</H1>
+</center>
+		<!-- /121471751/SHIFTPEN1 -->
+<div id='div-gpt-ad-1506663580660-0' style='height:250px; width:300px;'>
+<script>
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1506663580660-0'); });
+</script>
+</div>
+		
 	</body>
 </html>
