--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
 
 <script>
   googletag.cmd.push(function() {
-    googletag.defineSlot('/121471751/Leaderboard_728x90', [[300, 250], [728, 90]], 'div-gpt-ad-1505875071154-0').addService(googletag.pubads());
+    googletag.defineSlot('/121471751/Leaderboard_728x90', [[300, 250], [728, 90]], 'div-gpt-ad-1548179069029-0').addService(googletag.pubads());
     googletag.pubads().enableSingleRequest();
     googletag.enableServices();
   });
@@ -44,13 +44,13 @@ table.example2 td:first-child {width:20%;}
 <!-- Shift Ad Unit Indefinite -->
 	<tr>
 		<td>
-		September Campaign - Leaderboard_728x90	
+		September Campaign	
 		</td>
 		<td>
 			<!-- /121471751/Leaderboard_728x90 -->
 <div id='div-gpt-ad-1505875071154-0'>
 <script>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1505875071154-0'); });
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1548179069029-0'); });
 </script>
 </div>
 </div>
