--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
 
 <script>
   googletag.cmd.push(function() {
-    googletag.defineSlot('/121471751/Leaderboard_728x90', [728, 90], 'div-gpt-ad-1505913314778-0').addService(googletag.pubads());
+    googletag.defineSlot('/121471751/Leaderboard_728x90', [[300, 250], [728, 90]], 'div-gpt-ad-1548179069029-0').addService(googletag.pubads());
     googletag.pubads().enableSingleRequest();
     googletag.enableServices();
   });
@@ -58,9 +58,10 @@ table.example2 td:first-child {width:20%;}
 		</td>
 		<td style="height:300px;">
 			<!-- /121471751/Leaderboard_728x90 -->
-<div id='div-gpt-ad-1505913314778-0' style='position:absolute; top: 130px; right: 130px; height:90px; width:728px;'>
+<!--div id='div-gpt-ad-1505913314778-0'-->
+<div id='div-gpt-ad-1548179069029-0' style='position:absolute; top: 130px; right: 130px; height:90px; width:728px;'>
 <script>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1505913314778-0'); });
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1548179069029-0'); });
 </script>
 </div>
 		</td>
